--- a/druid_flyway_mybatis_mysql/src/main/resources/application.properties
+++ b/druid_flyway_mybatis_mysql/src/main/resources/application.properties
@@ -27,8 +27,7 @@ spring.datasource.druid.stat-view-servlet.login-password=admin
 
 server.port=8081
 
-#spring.flyway.default-schema=testSpringBoot
-#spring.flyway.locations=classpath:db/migration
-#spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
 
-#mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
